crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__multiple_keywords.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo {
    #[atom(CssAtomSet::Black)]
    Black(::css_parse::T![Ident]),
    #[atom(CssAtomSet::White)]
    White(::css_parse::T![Ident]),
    #[atom(CssAtomSet::LineThrough)]
    LineThrough(::css_parse::T![Ident]),
    #[atom(CssAtomSet::Pink)]
    Pink(::css_parse::T![Ident]),
}
#[cfg(test)]
::stable_type_layout::register!(Foo);
