crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__multiplier_with_comma_separated_keywords.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
#[derive(
    ::csskit_derives::Parse,
    ::csskit_derives::Peek,
    ::csskit_derives::ToCursors,
    ::csskit_derives::ToSpan,
    ::csskit_derives::SemanticEq,
    ::csskit_derives::NodeWithMetadata,
    Debug,
    Clone,
    PartialEq,
    Eq,
    PartialOrd,
    Ord,
    Hash
)]
#[metadata(delegate)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
#[cfg_attr(feature = "visitable", derive(::csskit_derives::Visitable), visit(skip))]
pub enum FooKeywords<'a> {
    #[atom(CssAtomSet::Outset)]
    Outset(crate::KeywordValue<'a, ::css_parse::T![Ident]>),
    #[atom(CssAtomSet::Inset)]
    Inset(crate::KeywordValue<'a, ::css_parse::T![Ident]>),
}
#[cfg(test)]
::stable_type_layout::register!(FooKeywords < 'static >);
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C)]
struct Foo<'a>(
    pub ::css_parse::CommaSeparated<'a, crate::Value<'a, crate::FooKeywords<'a>>>,
);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
