crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__multiplier_with_comma_separated_types.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[derive(
    ::csskit_derives::Parse,
    ::csskit_derives::Peek,
    ::csskit_derives::ToSpan,
    ::csskit_derives::ToCursors,
    ::csskit_derives::SemanticEq,
    ::csskit_derives::NodeWithMetadata,
    Debug,
    Clone,
    PartialEq,
    Eq,
    PartialOrd,
    Ord,
    Hash
)]
#[metadata(delegate)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
#[cfg_attr(feature = "visitable", derive(::csskit_derives::Visitable), visit(children))]
#[repr(C, u8)]
enum SingleFoo<'a> {
    #[cfg_attr(feature = "visitable", visit(skip))]
    #[atom(CssAtomSet::Foo)]
    Foo(::css_parse::T![Ident]),
    Bar(crate::Value<'a, crate::Bar<'a>>),
}
#[cfg(test)]
::stable_type_layout::register!(SingleFoo < 'static >);
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[repr(C)]
struct Foo<'a>(pub ::css_parse::CommaSeparated<'a, crate::SingleFoo<'a>>);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
