crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__multiplier_with_just_keywords.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(
    ::csskit_derives::Parse,
    ::csskit_derives::Peek,
    ::csskit_derives::ToCursors,
    ::csskit_derives::ToSpan,
    ::csskit_derives::SemanticEq,
    Debug,
    Copy,
    Clone,
    PartialEq,
    Eq,
    PartialOrd,
    Ord,
    Hash
)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
#[cfg_attr(feature = "visitable", derive(::csskit_derives::Visitable), visit(skip))]
pub enum FooKeywords {
    #[atom(CssAtomSet::Outset)]
    Outset(::css_parse::T![Ident]),
    #[atom(CssAtomSet::Inset)]
    Inset(::css_parse::T![Ident]),
}
struct Foo<'a>(pub ::css_parse::Vec<'a, crate::FooKeywords>);
