crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__multiplier_with_two_type_alternatives.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[repr(C)]
struct Baz<'a>(
    pub ::css_parse::CommaSeparated<
        'a,
        ::css_parse::Either<
            crate::Value<'a, crate::Foo<'a>>,
            crate::Value<'a, crate::Bar<'a>>,
        >,
    >,
);
#[cfg(test)]
::stable_type_layout::register!(Baz < 'static >);
