crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__ordered_combinator_with_checks_derives_parse.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo<'a> {
    #[atom(CssAtomSet::Bar)]
    Bar(crate::KeywordValue<'a, ::css_parse::T![Ident]>),
    Foo(
        #[atom(CssAtomSet::Foo)]
        crate::KeywordValue<'a, ::css_parse::T![Ident]>,
        Option<crate::CalcableValue<'a, crate::Ranged<crate::Angle, -90i32, 90i32>>>,
    ),
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
