crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__ordered_custom_function_last_option.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[repr(C)]
struct Foo<'a>(
    pub crate::CaretColorStyleValue<'a>,
    pub Option<crate::CaretAnimationStyleValue>,
);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
