crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__ordered_with_group_alternatives.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo<'a> {
    #[atom(CssAtomSet::Normal)]
    Normal(crate::KeywordValue<'a, ::css_parse::T![Ident]>),
    ContentDistribution(crate::Value<'a, crate::ContentDistribution>),
    ContentPosition(
        Option<crate::Value<'a, crate::OverflowPosition>>,
        crate::Value<'a, crate::ContentPosition>,
    ),
    Left(
        Option<crate::Value<'a, crate::OverflowPosition>>,
        #[atom(CssAtomSet::Left)]
        crate::KeywordValue<'a, ::css_parse::T![Ident]>,
    ),
    Right(
        Option<crate::Value<'a, crate::OverflowPosition>>,
        #[atom(CssAtomSet::Right)]
        crate::KeywordValue<'a, ::css_parse::T![Ident]>,
    ),
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
