crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__simple_all_must_occur.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[repr(C)]
#[parse(all_must_occur)]
struct Foo<'a>(pub crate::CalcableValue<'a, crate::Length>, pub ::css_parse::T![Ident]);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
