crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__simple_optionals.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
struct Foo<'a>(pub crate::Length, pub ::css_parse::T![Ident]);
